--- a/sass/layout/_cta-section.scss
+++ b/sass/layout/_cta-section.scss
@@ -25,5 +25,9 @@
             column-gap: 1.6rem;
             row-gap: 0rem;
         }
+
+        &--in-header {
+            padding: 0rem;
+        }
     }
 }
